failed.log
 src/runtime/export/../../runtime/PyType.cpp:332:34: error: no member named 'attributes' in 'py::PyType'
   332 |                                                         if (auto result = (*self->attributes())[RtValue::from_ptr(
       |                                                                             ~~~~  ^
 src/runtime/export/../../runtime/PyType.cpp:346:13: error: no member named 'attributes' in 'py::PyType'
   346 |                                                 self->attributes()->insert(
       |                                                 ~~~~  ^
 src/runtime/export/../../runtime/PyType.cpp:505:28: error: no member named 'attributes' in 'py::PyType'
   505 |         bool may_add_dict = base->attributes() == nullptr;
       |                             ~~~~  ^
 src/runtime/export/../../runtime/PyType.cpp:560:2: error: use of undeclared identifier 'm_attributes'
   560 |         m_attributes = dict;
       |         ^
 src/runtime/export/../../runtime/PyType.cpp:562:7: error: use of undeclared identifier 'm_attributes'
   562 |         if (!m_attributes->map().contains(RtValue::from_ptr(PyString::create("__module__").unwrap()))) {
       |              ^
 src/runtime/export/../../runtime/PyType.cpp:571:5: error: use of undeclared identifier 'm_attributes'
   571 |                                 m_attributes->insert(
       |                                 ^
 src/runtime/export/../../runtime/PyType.cpp:578:4: error: use of undeclared identifier 'm_attributes'
   578 |                         m_attributes->map().find(RtValue::from_ptr(PyString::create("__qualname__").unwrap()));
       |                         ^
 src/runtime/export/../../runtime/PyType.cpp:579:9: error: use of undeclared identifier 'm_attributes'
   579 |                 it != m_attributes->map().end()) {
       |                       ^
 src/runtime/export/../../runtime/PyType.cpp:591:16: error: use of undeclared identifier 'm_attributes'
   591 |         if (auto it = m_attributes->map().find(RtValue::from_ptr(PyString::create("__doc__").unwrap()));
       |                       ^
 src/runtime/export/../../runtime/PyType.cpp:592:9: error: use of undeclared identifier 'm_attributes'
   592 |                 it != m_attributes->map().end()) {
       |                       ^
 src/runtime/export/../../runtime/PyType.cpp:601:16: error: use of undeclared identifier 'm_attributes'
   601 |         if (auto it = m_attributes->map().find(RtValue::from_ptr(PyString::create("__new__").unwrap()));
       |                       ^
 src/runtime/export/../../runtime/PyType.cpp:602:9: error: use of undeclared identifier 'm_attributes'
   602 |                 it != m_attributes->map().end()) {
       |                       ^
 src/runtime/export/../../runtime/PyType.cpp:610:4: error: use of undeclared identifier 'm_attributes'
   610 |                         m_attributes->insert(RtValue::from_ptr(PyString::create("__new__").unwrap()), new_slot);
       |                         ^
 src/runtime/export/../../runtime/PyType.cpp:648:4: error: use of undeclared identifier 'm_attributes'
   648 |                         m_attributes->map().find(RtValue::from_ptr(PyString::create("__classcell__").unwrap()));
       |                         ^
 src/runtime/export/../../runtime/PyType.cpp:649:9: error: use of undeclared identifier 'm_attributes'
   649 |                 it != m_attributes->map().end()) {
       |                       ^
 src/runtime/export/../../runtime/PyType.cpp:655:13: error: use of undeclared identifier 'm_attributes'
   655 |                         auto r = m_attributes->delete_item(PyString::create("__classcell__").unwrap());
       |                                  ^
 src/runtime/export/../../runtime/PyType.cpp:1015:17: error: use of undeclared identifier 'm_attributes'
  1015 |                 if (auto it = m_attributes->map().find(
       |                               ^
 src/runtime/export/../../runtime/PyType.cpp:1017:10: error: use of undeclared identifier 'm_attributes'
  1017 |                         it != m_attributes->map().end()) {
       |                               ^
 src/runtime/export/../../runtime/PyType.cpp:1028:4: error: use of undeclared identifier 'm_attributes'
  1028 |                         m_attributes->insert(
       |                         ^
 fatal error: too many errors emitted, stopping now [-ferror-limit=]
 20 errors generated.